--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-<!doctype html>
-<html>
-  <head>
-    <title>GAMES CODE</title>
-  </head>
-  <body>
-    <p>GAMES CODE.</p>
-  </body>
-</html>
+<h1>Games Code</h1>
+<p></p>
