--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
-<h1>Games Code</h1>
-<p></p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>GAMES CODE</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Daybson Paisante!</h1>
+				<p>This is my page <em>Games Code</em>, where you can see my portfolio of projects (app, game, videos, courses, drawings). <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:daybson.paisante@outlook.com">email</a></li>
+        		<li><a href="https://www.linkedin.com/in/paisante/">Linkedin</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
