--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>GAMES CODE</title>
+		<link rel="stylesheet" type="text/css" href="/css/index.css">		
 	</head>
 	<body>
 		<nav>
