--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Daybson Paisante!</h1>
-				<p>This is my page <em>Games Code</em>, where you can see my portfolio of projects (app, game, videos, courses, drawings). <a href="/about">Read more about my life...</a></p>
+				<p>This is my page <em>Games Code</em>, where you can see my portfolio of projects (app, game, videos, courses, drawings).</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
