--- a/index.html
+++ b/index.html
@@ -4,25 +4,16 @@
 		<title>GAMES CODE</title>
 		<link rel="stylesheet" type="text/css" href="/css/index.css">		
 	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+	<body> 
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Daybson Paisante!</h1>
-				<p>This is my page <em>Games Code</em>, where you can see my portfolio of projects (app, game, videos, courses, drawings).</p>
+        		<h1>Política de privacidade</h1>
+				<p>Armazenaremos apenas seu endereço de email e nome pessoal vinculado à conta Google, para fins de verificação de compras no aplicativo.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:daybson.paisante@outlook.com">email</a></li>
-        		<li><a href="https://www.linkedin.com/in/paisante/">Linkedin</a></li>
+        		<li><a href="mailto:daybsonpaisante@gmail.com">email</a></li>        		
 			</ul>
 		</footer>
 	</body>
