--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body> 
 		<div class="container">
     		<div class="blurb">
-        		<h1>Política de privacidade</h1>
-				<p>Armazenaremos apenas seu endereço de email e nome pessoal vinculado à conta Google, para fins de verificação de compras no aplicativo.</p>
+        		<h1>Privacy policy</h1>
+				<p>We will store only your email address and personal name linked to the Google account to purchase verification purposes in the application.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
